[r2dbc] Update common files for branch master (#519)
* Update common files

* Trying to use kotlin workaround same as in micronaut-data

---------

Co-authored-by: radovanradic <radicr@gmail.com>