@@ -1,3 +1,28 @@
 plugins {
-    id "io.micronaut.build.internal.r2dbc-kotlin-example"
+    id "org.jetbrains.kotlin.jvm"
+}
+
+tasks.named("compileKotlin") {
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+}
+
+tasks.named("compileTestKotlin") {
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+}
+
+kotlin {
+    kotlinDaemonJvmArgs = ["--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                           "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
 }
